再次分离了照片工具

--- a/ArchiveMaster.UI/ArchiveMaster.UI.csproj
+++ b/ArchiveMaster.UI/ArchiveMaster.UI.csproj
@@ -32,6 +32,7 @@
         <ProjectReference Include="..\ArchiveMaster.Core\ArchiveMaster.Core.csproj"/>
         <ProjectReference Include="..\ArchiveMaster.Module.FileBackupper\ArchiveMaster.Module.FileBackupper.csproj"/>
         <ProjectReference Include="..\ArchiveMaster.Module.FileTools\ArchiveMaster.Module.FileTools.csproj"/>
+        <ProjectReference Include="..\ArchiveMaster.Module.PhotoTools\ArchiveMaster.Module.PhotoTools.csproj"/>
         <ProjectReference Include="..\ArchiveMaster.Module.OfflineSync\ArchiveMaster.Module.OfflineSync.csproj"/>
         <ProjectReference Include="..\ArchiveMaster.Module.DiscArchive\ArchiveMaster.Module.DiscArchive.csproj"/>
         <ProjectReference Include="..\ArchiveMaster.Module.Test\ArchiveMaster.Module.Test.csproj" Condition="'$(Configuration)' == 'Debug'"/>
