基本完成了照片地理信息写入工具，但仍然有很多地方需要修改

--- a/ArchiveMaster.Module.PhotoTools/ArchiveMaster.Module.PhotoTools.csproj
+++ b/ArchiveMaster.Module.PhotoTools/ArchiveMaster.Module.PhotoTools.csproj
@@ -16,6 +16,9 @@
       <DependentUpon>PhotoSlimmingPanel.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Views\PhotoGeoTaggingPanel.axaml.cs">
+      <DependentUpon>PhotoGeoTaggingPanel.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\RepairModifiedTimePanel.axaml.cs">
       <DependentUpon>RepairModifiedTimePanel.axaml</DependentUpon>
       <SubType>Code</SubType>
@@ -28,6 +31,8 @@
 
   <ItemGroup>
     <PackageReference Include="Mapster" />
+    <PackageReference Include="SixLabors.ImageSharp" />
+    <PackageReference Include="MetadataExtractor" />
   </ItemGroup>
 
   <ItemGroup>
