--- a/ArchiveMaster.Module.PhotoTools/ArchiveMaster.Module.PhotoTools.csproj
+++ b/ArchiveMaster.Module.PhotoTools/ArchiveMaster.Module.PhotoTools.csproj
@@ -30,8 +30,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ExifLibNet.Updated" />
     <PackageReference Include="Mapster" />
-    <PackageReference Include="SixLabors.ImageSharp" />
     <PackageReference Include="MetadataExtractor" />
   </ItemGroup>
 
