新增文件列表筛选功能

--- a/ArchiveMaster.Core/ArchiveMaster.Core.csproj
+++ b/ArchiveMaster.Core/ArchiveMaster.Core.csproj
@@ -23,6 +23,10 @@
       <DependentUpon>OfflineSyncPanelBase.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Views\FileFilterPanel.axaml.cs">
+      <DependentUpon>FileFilterPanel.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
 
