重命名功能支持了使用C#代码自定义目标文件名

--- a/ArchiveMaster.Module.FileTools/ArchiveMaster.Module.FileTools.csproj
+++ b/ArchiveMaster.Module.FileTools/ArchiveMaster.Module.FileTools.csproj
@@ -45,5 +45,6 @@
 
   <ItemGroup>
     <PackageReference Include="Mapster" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" />
   </ItemGroup>
 </Project>
