优化了复制代码；正在给异地备份增加加密（未完成无法运行）

--- a/ArchiveMaster.Module.Test/ArchiveMaster.Module.Test.csproj
+++ b/ArchiveMaster.Module.Test/ArchiveMaster.Module.Test.csproj
@@ -12,6 +12,10 @@
     <Compile Remove="obj\**" />
     <EmbeddedResource Remove="obj\**" />
     <None Remove="obj\**" />
+    <Compile Update="Views\FileCopyTestPanel.axaml.cs">
+      <DependentUpon>FileCopyTestPanel.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
 
