新增文件硬链接去重模块（仅完成初始化部分）

--- a/ArchiveMaster.Module.FileTools/ArchiveMaster.Module.FileTools.csproj
+++ b/ArchiveMaster.Module.FileTools/ArchiveMaster.Module.FileTools.csproj
@@ -24,6 +24,10 @@
       <DependentUpon>BatchCommandLinePanel.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Views\LinkDeduplicationPanel.axaml.cs">
+      <DependentUpon>LinkDeduplicationPanel.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
