--- a/ArchiveMaster.UI/ArchiveMaster.UI.csproj
+++ b/ArchiveMaster.UI/ArchiveMaster.UI.csproj
@@ -16,6 +16,10 @@
           <DependentUpon>SplashWindow.axaml</DependentUpon>
           <SubType>Code</SubType>
         </Compile>
+        <Compile Update="Views\SettingDialog.axaml.cs">
+          <DependentUpon>ProgressDialog.axaml</DependentUpon>
+          <SubType>Code</SubType>
+        </Compile>
     </ItemGroup>
 
     <ItemGroup>
