新增照片地理分类模块（未完成）

--- a/ArchiveMaster.Module.PhotoTools/ArchiveMaster.Module.PhotoTools.csproj
+++ b/ArchiveMaster.Module.PhotoTools/ArchiveMaster.Module.PhotoTools.csproj
@@ -23,6 +23,10 @@
       <DependentUpon>RepairModifiedTimePanel.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Views\PhotoGeoSorterPanel.axaml.cs">
+      <DependentUpon>PhotoGeoSorterPanel.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -33,5 +37,8 @@
     <PackageReference Include="ExifLibNet.Updated" />
     <PackageReference Include="Mapster" />
     <PackageReference Include="MetadataExtractor" />
+    <PackageReference Include="NetTopologySuite" />
+    <PackageReference Include="NetTopologySuite.IO.Esri.Shapefile" />
+    <PackageReference Include="NetTopologySuite.IO.GeoJSON4STJ" />
   </ItemGroup>
 </Project>
