--- a/ArchiveMaster.Core/ArchiveMaster.Core.csproj
+++ b/ArchiveMaster.Core/ArchiveMaster.Core.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="Magick.NET-Q16-AnyCPU" />
     <PackageReference Include="Mapster" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
+    <PackageReference Include="System.Reactive" />
   </ItemGroup>
 
   <ItemGroup>
