--- a/ArchiveMaster.UI/ArchiveMaster.UI.csproj
+++ b/ArchiveMaster.UI/ArchiveMaster.UI.csproj
@@ -8,10 +8,10 @@
         <BaseIntermediateOutputPath>$(Temp)\$(SolutionName)\obj\$(Configuration)\$(AssemblyName)</BaseIntermediateOutputPath>
     </PropertyGroup>
     <ItemGroup>
-        <AvaloniaXaml Remove="obj\**"/>
-        <Compile Remove="obj\**"/>
-        <EmbeddedResource Remove="obj\**"/>
-        <None Remove="obj\**"/>
+        <AvaloniaXaml Remove="obj\**" />
+        <Compile Remove="obj\**" />
+        <EmbeddedResource Remove="obj\**" />
+        <None Remove="obj\**" />
         <Compile Update="Views\SplashWindow.axaml.cs">
           <DependentUpon>SplashWindow.axaml</DependentUpon>
           <SubType>Code</SubType>
@@ -23,8 +23,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia.Svg.Skia"/>
-        <PackageReference Include="Microsoft.Extensions.Hosting"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" />
+        <PackageReference Include="Svg.Controls.Skia.Avalonia" />
     </ItemGroup>
 
     <ItemGroup>
@@ -37,12 +37,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\ArchiveMaster.Core\ArchiveMaster.Core.csproj"/>
-        <ProjectReference Include="..\ArchiveMaster.Module.FileBackupper\ArchiveMaster.Module.FileBackupper.csproj"/>
-        <ProjectReference Include="..\ArchiveMaster.Module.FileTools\ArchiveMaster.Module.FileTools.csproj"/>
-        <ProjectReference Include="..\ArchiveMaster.Module.PhotoTools\ArchiveMaster.Module.PhotoTools.csproj"/>
-        <ProjectReference Include="..\ArchiveMaster.Module.OfflineSync\ArchiveMaster.Module.OfflineSync.csproj"/>
-        <ProjectReference Include="..\ArchiveMaster.Module.DiscArchive\ArchiveMaster.Module.DiscArchive.csproj"/>
-        <ProjectReference Include="..\ArchiveMaster.Module.Test\ArchiveMaster.Module.Test.csproj" Condition="'$(Configuration)' == 'Debug'"/>
+        <ProjectReference Include="..\ArchiveMaster.Core\ArchiveMaster.Core.csproj" />
+        <ProjectReference Include="..\ArchiveMaster.Module.FileBackupper\ArchiveMaster.Module.FileBackupper.csproj" />
+        <ProjectReference Include="..\ArchiveMaster.Module.FileTools\ArchiveMaster.Module.FileTools.csproj" />
+        <ProjectReference Include="..\ArchiveMaster.Module.PhotoTools\ArchiveMaster.Module.PhotoTools.csproj" />
+        <ProjectReference Include="..\ArchiveMaster.Module.OfflineSync\ArchiveMaster.Module.OfflineSync.csproj" />
+        <ProjectReference Include="..\ArchiveMaster.Module.DiscArchive\ArchiveMaster.Module.DiscArchive.csproj" />
+        <ProjectReference Include="..\ArchiveMaster.Module.Test\ArchiveMaster.Module.Test.csproj" Condition="'$(Configuration)' == 'Debug'" />
     </ItemGroup>
 </Project>
