适配FzLib3：初步完成Core和UI不报错

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,6 +3,7 @@
     <Nullable>disable</Nullable>
     <AppVersion>2.1.0</AppVersion>
     <AvaloniaVersion>11.3.2</AvaloniaVersion>
+    <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
   </PropertyGroup>
 
   <ItemGroup>
