--- a/ArchiveMaster.UI.Android/ArchiveMaster.UI.Android.csproj
+++ b/ArchiveMaster.UI.Android/ArchiveMaster.UI.Android.csproj
@@ -10,8 +10,9 @@
     <OutputPath>$(Temp)\$(SolutionName)\$(Configuration)\$(AssemblyName)</OutputPath>
     <BaseIntermediateOutputPath>$(Temp)\$(SolutionName)\obj\$(Configuration)\$(AssemblyName)</BaseIntermediateOutputPath>
 
-    <RunAOTCompilation>false</RunAOTCompilation>
-    <PublishTrimmed>false</PublishTrimmed>
+    <!--<RunAOTCompilation>false</RunAOTCompilation>
+    <PublishTrimmed>false</PublishTrimmed>-->
+    <TrimMode>partial</TrimMode>
   </PropertyGroup>
   <ItemGroup>
     <AndroidJavaSource Remove="obj\**" />
